# DIFI

./: .gitignore  20250220_outputs_difi_new.csv  20250220_outputs_difi_old.csv  20250320_outputs_difi_vectorized.csv  MANIFEST.in  Readme.md  SwarmL2_F107_Read.py  SwarmL2_MIO_SHA_Read_v2.py  examples.py  examples_plot.py  forward_Sq_d_Re.py  geod2geoc.py  getmut.py  gg2gm_2010.py  jd2000_dt.py  output_results.py  packaging_package.md  pyproject.toml  requirements.txt  validate_above_sq_current.py  validate_difi8.py  validate_xdifi.py
.github/workflows/: branch-ci.yml  ci.yml  deploy-wheels.yml  deploy.yml  pr_check.yml  (+1 more)
DIFI/: SwarmL2_F107_Read.py  SwarmL2_MIO_SHA_Read_v2.py  __init__.py  design_SHA_Sq_e_Re_v2.py  design_SHA_Sq_i_Re_v2.py  difi_tests.py  forward_Sq_d_Re.py  forward_Sq_d_Re_2.py  forward_Sq_d_Re_gg2mv2.py  geod2geoc.py  getSQfield.py  getSQfield_geoc.py  getSQfield_par.py  getSQfield_test_forward.py  get_SQ_field_DIFI7.py  get_SQ_field_TESTING_ONLY.py  get_SQ_field_xDIFI.py  get_f107_index.py  get_f107_index_DIFI7.py  get_f107_index_DIFI8.py  get_f107_index_all.py  get_f107_index_xDIFI.py  getmut.py  gg2gm_2010.py  gg2gm_2010_arg_pole.py  jd2000_dt.py  legendre.py  sun_md2000.py
DIFIVenv/: pyvenv.cfg
pyDIFI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: 20250220_outputs_difi_main.csv  20250226_outputs_difi_pypidifi7.csv  20250319_outputs_inputs_difi_pypidifi7.csv  Broken_test_time_range_list_no_warning.py  DIFI8_after_SQ_test_values.npy  DIFI8_below_SQ_test_values.npy  Test_outputs.py  Test_sqfield.py  check_f107_gets_correct_values.py  design_sha_e.csv  design_sha_i.csv  difi_tests.py  test_above_and_below_SQ_field.py  test_difi8.py  test_difi8_aboveSQfield.py  test_geoc_inputs.py  test_getSQfield.py  test_list_input.py  test_time_range_list.py  test_time_range_point.py  test_val_above_SQ.txt  test_validate_inputs.py  test_values_DIFI8_v1_20250928.txt  test_values_DIFI8_v2_aboveSQfield_20251015.txt  test_values_xDIFI2_v1_20250528.txt  test_values_xDIFI2_v1_20250928.txt  test_values_xDIFI2_v2_aboveSQfield_20251015.txt  test_vec.py  test_xdifi2.py  test_xdifi2_aboveSQfield.py  validate_above_and_below_SQ_field.py  validate_above_sq_current.py  validate_difi8.py  validate_geoc_inputs.py  validate_list_input.py  validate_par_speed_and_accuracy.py  validate_sqlfield_geoc.py  validate_time_range_list.py  validate_time_range_list_no_warning.py  validate_time_range_point.py  (+5 more)
(+11 files in other folders)
