[project]
name = "pyDIFI"
version = "7.1.3"
authors = [
  { name="Li-Yin Young", email="liyin.young@noaa.gov" },
]
description = "The python module for DIFI-7"
readme = "README.md"
#requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy>=2.0.2",
    "geomaglib>=1.1.5"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/DIFI"

[tool.setuptools]
packages = ["DIFI"]
