[project]
name = "pyDIFI"
version = "7.2.0"
authors = [
  { name="Li-Yin Young", email="liyin.young@noaa.gov" },
  { name="Liam Kilcommons", email="liam.kilcommons@colorado.edu" }
]
description = "The python module for DIFI-7"
readme = "README.md"
#requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy",
    "geomaglib>=1.2.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/DIFI"

[tool.setuptools]
packages = ["DIFI"]
