[project]
name = "pyDIFI"
version = "8.1.2"
authors = [
    { name="Collin Kadlecek", email="Collin.Kadlecek@colorado.edu" },
  { name="Li-Yin Young", email="liyin.young@colorado.edu" },
  { name="Liam Kilcommons", email="liam.kilcommons@colorado.edu" }
]
description = "The python module for DIFI-8"
readme = "README.md"
#requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy",
    "geomaglib>=1.2.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/DIFI"

[tool.setuptools]
packages = ["DIFI"]
